--- a/cafeservellocontroler/Views/AlterarSenha/Editar.cshtml
+++ b/cafeservellocontroler/Views/AlterarSenha/Editar.cshtml
@@ -5,7 +5,7 @@
 
     <div class="form-group">
         <div class="div-Criar reponsivo">
-        <label for="senhaAtual">Senha Atual</label>
+        <label for="senhaAtual">Senha Atual*</label>
 
         <div class="input-group p-0" style="border: 1px solid #ced4da;">
             <input type="password" asp-for="SenhaAtual" class="form-control input-senha" placeholder="Informe a senha atual" style="border: none">
@@ -21,7 +21,7 @@
 
     
         <div class="form-group">
-            <label for="novaSenha">Nova Senha</label>
+            <label for="novaSenha">Nova Senha*</label>
         <div class="input-group p-0" style="border: 1px solid #ced4da;">
             <input type="password" asp-for="NovaSenha" class="form-control input-senha" placeholder="Informe a nova senha" style="border: none">
 
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group ">
-            <label for="confirmeSenha">Confirme Senha</label>
+            <label for="confirmeSenha">Confirme Senha*</label>
                 <div class="input-group p-0" style="border: 1px solid #ced4da;">
                     <input type="password" asp-for="ConfirmarNovaSenha" class="form-control input-senha" placeholder="Confirme a nova senha" style="border: none">
                     <button class="btn toggleSenha" type="button">
