--- a/cafeservellocontroler/Views/Login/RecuperarSenha.cshtml
+++ b/cafeservellocontroler/Views/Login/RecuperarSenha.cshtml
@@ -64,7 +64,7 @@
         <button type="submit" class="btn btn-primary botao-login">Redefinir senha</button>
         <div class="d-flex">
            
-            <a class="btn btn-secondary recuperarBtnVoltar" asp-controller="Login" asp-action="Index" role="button">◀ Voltar</a>
+            <a class="btn btn-outline-dark recuperarBtnVoltar" asp-controller="Login" asp-action="Index" role="button">◀ Voltar</a>
         </div>
        
         
