--- a/cafeservellocontroler/Views/Shared/_Layout.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Layout.cshtml
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="~/css/tabelas.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/modal.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/alterarsenha.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/paginaInicial.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/relatorio.css" asp-append-version="true" />
 
     <link rel="stylesheet" href="~/css/Search_PesquisaCss/Search.css" asp-append-version="true" />
    
@@ -123,7 +125,7 @@
                                        data-bs-target="#modalLucroPorProdutoIndex"
                                        onclick="limparFormulario()">
 
-                                    <i class="fa-solid fa-file-pdf"></i>
+                                    <i class="fa-solid fa-money-check-dollar"></i>
                                     <span class="item-description">Lucro por Produto</span>
                                     </a>
                                    
@@ -136,7 +138,8 @@
                                    data-bs-target="#modalProdutoMaisVendidoIndex"
                                    onclick="limparFormulario()">
 
-                                    <i class="fa-solid fa-file-pdf"></i>
+                                    <i class="fa-solid fa-chart-simple"></i>
+
                                     <span class="item-description">Produto mais Vendido</span>
                                 </a>
 
@@ -149,7 +152,7 @@
                                    data-bs-target="#modalRevendedorMaisAtivoIndex"
                                    onclick="limparFormulario()">
 
-                                    <i class="fa-solid fa-file-pdf"></i>
+                                    <i class="fa-solid fa-chart-line"></i>
                                     <span class="item-description">Revendedor mais Ativo</span>
                                 </a>
 
