--- a/cafeservellocontroler/Views/Shared/_Modal.cshtml
+++ b/cafeservellocontroler/Views/Shared/_Modal.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="modal fade" id="modalLucroPorProdutoIndex" tabindex="-1" aria-labelledby="modalLucroPorProdutoIndexLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog ">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalLucroPorProdutoIndexLabel">Lucro Por Produto - Filtro</h5>
+                <h5 class="modal-title" id="modalLucroPorProdutoIndexLabel">Lucro Por Produto </h5>
                 <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
 
@@ -15,10 +15,10 @@
 
 
 <div class="modal fade" id="modalProdutoMaisVendidoIndex" tabindex="-1" aria-labelledby="modalProdutoMaisVendidoIndexLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog  ">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalProdutoMaisVendidoIndexLabel">Produto Mais Vendido - Filtro</h5>
+                <h5 class="modal-title" id="modalProdutoMaisVendidoIndexLabel">Produto Mais Vendido </h5>
                 <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
             <div class="modal-body">
@@ -29,10 +29,10 @@
 </div>
 
 <div class="modal fade" id="modalRevendedorMaisAtivoIndex" tabindex="-1" aria-labelledby="modalRevendedorMaisAtivoIndexLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog  ">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalRevendedorMaisAtivoIndexLabel">Revendedor mais ativo - Filtro</h5>
+                <h5 class="modal-title" id="modalRevendedorMaisAtivoIndexLabel">Revendedor mais ativo </h5>
                 <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
             </div>
             <div class="modal-body">
@@ -41,3 +41,4 @@
         </div>
     </div>
 </div>
+
