--- a/cafeservellocontroler/wwwroot/css/login.css
+++ b/cafeservellocontroler/wwwroot/css/login.css
@@ -20,7 +20,7 @@
 }
 
 .botao-login {
-    margin-top: auto; /* mantém o botão no fim */
+    margin-top: auto; 
     box-shadow: 1px 2px 0.9px gray;
     border-radius: 3px;
     background: linear-gradient(to top right, #0a4fa8, #1a7de0);
@@ -67,8 +67,10 @@ input {
 
 .letra-login {
     font-size: 20px;
+    padding: 5px;
+    border-radius: 3px;
     font-weight: bold;
-    box-shadow: 0px 2px 0.9px gray;
+    box-shadow: 1px 1px 3px 0px gray;
     border: none;
     margin-bottom: 0;
     margin-left: auto;
