--- a/cafeservellocontroler/Views/Produto/Index.cshtml
+++ b/cafeservellocontroler/Views/Produto/Index.cshtml
@@ -35,15 +35,7 @@
         </div>
     }
 
-    <a href="javascript:void(0)"
-       data-bs-toggle="modal"
-       data-bs-target="#modalLucroPorProdutoIndex"
-       onclick="limparFormulario()">
-
-        <i class="fa-solid fa-file-pdf"></i>
-        <span class="item-description">Lucro por Produto</span>
-    </a>
-
+   
 
 
 
@@ -78,8 +70,19 @@
                     data-bs-toggle="modal"
                     data-bs-target="#modalLucroPorProdutoIndex"
                     onclick="limparFormulario()">
+
+                <i class="fa-solid fa-money-check-dollar"></i>
+            </button>
+
+        </div>
+        <div class="d-flex justify-content-end">
+            <button class="btn-lg btn-primary  "
+                    href="javascript:void(0)"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalProdutoMaisVendidoIndex"
+                    onclick="limparFormulario()">
                 
-                <i class="fa-solid fa-print"></i>
+                <i class="fa-solid fa-chart-simple"></i>
             </button>
         </div>
 
@@ -111,7 +114,7 @@
             <tr class="div-thead">
                 @* <th scope="col" class="idTR">ID</th> *@
                 <th scope="col">Nome</th>
-                <th scope="col">Descrição</th>
+                <th scope="col">Tipo do Café</th>
                 <th scope="col" class="text-center">Estoque</th>
                 <th scope="col" class="text-center">Preço Compra</th>
                 <th scope="col" class="text-center">Preço Venda</th>
@@ -233,7 +236,12 @@
                     </tr>
                 }
             }  
-            
+            else
+            {
+                <tr>
+                    <td colspan="7" class="text-center">Nenhum Produto registrado.</td>
+                </tr>
+            }
             </tbody>
         </table>
 
