--- a/cafeservellocontroler/Views/Produto/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Produto/_Criar.cshtml
@@ -7,27 +7,27 @@
     <div class="div-Criar reponsivo">
     
     <div class="form-group">
-        <label for="nome">Nome</label>
+        <label for="nome">Nome*</label>
         <input type="text" asp-for="Nome" class="form-control" placeholder="Informe o nome do produto">
         <span asp-validation-for="Nome" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label for="descricao">Descrição</label>
+         <label for="descricao">Tipo do café*</label>
         <input type="text" asp-for="Descricao" class="form-control" placeholder="Informe a descrição">
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
 
     <div class="row">
         <div class="form-group col-md-6 ">
-            <label for="precoCompra">Preço Compra</label>
+            <label for="precoCompra">Preço Compra*</label>
             <input asp-for="PrecoCompra" id="precoCompra" name="PrecoCompra" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
             <span asp-validation-for="PrecoCompra" class="text-danger"></span>
         </div>
 
 
             <div class="form-group col-md-6">
-            <label for="preco">Preço Venda</label>
+            <label for="preco">Preço Venda*</label>
             <input asp-for="Preco" id="preco" name="Preco" type="text" class="form-control mask-money" autocomplete="off" inputmode="decimal" placeholder="Informe o valor" />
             <span asp-validation-for="Preco" class="text-danger"></span>
         </div>
@@ -35,7 +35,7 @@
 
     <div class="row">
         <div class="form-group col-md-6">
-            <label for="estoque">Estoque</label>
+            <label for="estoque">Estoque*</label>
             <input type="number" min="0" step="1" min="0"
             onkeydown="if(event.key === '-' || event.key === 'e' || event.key === '+' ) event.preventDefault();"
             oninput="this.value = this.value.replace(/[^0-9]/g, '');"
