--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -64,7 +64,14 @@
                     data-bs-target="#modalRevendedorMaisAtivoIndex"
                     onclick="limparFormulario()">
 
-                <i class="fa-solid fa-print"></i>
+                <i class="fa-solid fa-chart-line"></i>
+            </button>
+        </div>
+
+        <div class="d-flex justify-content-end">
+            <button class="btn-lg btn-outline-dark"
+                    onclick="window.location.href='/Venda/Index'">
+                <i class="fa-solid fa-store"></i>
             </button>
         </div>
 
@@ -100,7 +107,7 @@
                     <th scope="col">Endereço</th>
                 <th scope="col">Telefone</th>
                 <th scope="col" class="alinharModificar-ApagarTh">Modificar</th>
-                    <th scope="col" class="alinharModificar-ApagarTh">Apagar</th>
+                    <th scope="col" class="alinharModificar-ApagarTh">Apagar</th>            
                 </tr>
             </thead>
             <tbody>
@@ -110,10 +117,10 @@
                     {
                         <tr>
                             @* <th scope="row" class="idTH">@revendedor.Id</th> *@
-                            <td scope="row" class="espacoPadraoTabela">@revendedor.Nome</td>
-                            <td scope="row" class="espacoPadraoTabela">@revendedor.NomeFantasia</td>
-                       
-                            <td scope="row" class="espacoPadraoTabela">@revendedor.Endereco</td>
+                            <td scope="row" class="espacoPadraoTabelaRevendedor">@revendedor.Nome</td>
+                        <td scope="row" class="espacoPadraoTabelaRevendedor">@revendedor.NomeFantasia</td>
+
+                        <td scope="row" class="espacoPadraoTabelaRevendedor">@revendedor.Endereco</td>
                         <td scope="row" class="espacoPadraoTabelaTelefone text-center ">@revendedor.Telefone</td>
       
                             <td scope="row" class="espacoModificarOpcoes">
@@ -210,6 +217,12 @@
                         </tr>
                     }
                 }
+            else
+            {
+                <tr>
+                    <td colspan="7" class="text-center">Nenhum Revendedor registrado.</td>
+                </tr>
+            }
         </tbody>
     </table>
  </div>
