--- a/cafeservellocontroler/Views/Usuario/Editar.cshtml
+++ b/cafeservellocontroler/Views/Usuario/Editar.cshtml
@@ -9,7 +9,7 @@
     <input type="hidden" asp-for="Id" />
     <div class="div-Criar reponsivo">
         <div class="form-group">
-            <label for="login">Login</label>
+            <label for="login">Login*</label>
             <input type="text" asp-for="Login" class="form-control" placeholder="Informe o nome de login">
             <span asp-validation-for="Login" class="text-danger"></span>
         </div>
@@ -18,7 +18,7 @@
 
 
         <div class="form-group">
-            <label for="email">Email</label>
+            <label for="email">Email*</label>
             <input type="email" asp-for="Email" class="form-control" placeholder="Informe o email">
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
@@ -27,7 +27,7 @@
        
 
             <div class="form-group col-md-6">
-                <label for="nivelAcesso">Nível de Acesso</label>
+                <label for="nivelAcesso">Nível de Acesso*</label>
                 <select asp-for="Perfil" class="form-control">
                     <option value="">Selecione</option>
                     <option value="1">Administrador</option>
