--- a/cafeservellocontroler/Views/Venda/Index.cshtml
+++ b/cafeservellocontroler/Views/Venda/Index.cshtml
@@ -60,6 +60,16 @@
             </button>
         </div>
 
+
+        <div class="d-flex justify-content-end">
+            <button class="btn-lg btn-outline-dark"
+                    onclick="window.location.href='/Revendedor/Index'">
+                <i class="fa-solid fa-user-plus"></i>
+            </button>
+        </div>
+
+       
+
     </div>
 </div>
 
@@ -91,9 +101,9 @@
                         @* <td class="idTH">@venda.Id</td> *@
 
 
-                        <td class="espacoPadraoTabela">@venda.Revendedor.Nome</td>
+                        <td class="espacoPadraoTabelaVenda">@venda.Revendedor.Nome</td>
 
-                        <td class="espacoPadraoTabela">@venda.Usuario.Login</td>
+                        <td class="espacoPadraoTabelaVenda">@venda.Usuario.Login</td>
 
                         <td class="espacoPadraoTabelaItem text-center">@venda.ItensVendas.Count</td>
 
