--- a/cafeservellocontroler/Views/AlterarSenha/Index.cshtml
+++ b/cafeservellocontroler/Views/AlterarSenha/Index.cshtml
@@ -40,8 +40,8 @@
 
         <hr class="mb-0" />
 
-        <div class="row justify-content-center">
-            <!-- CENTRALIZA OS BOTOES -->
+        <div class="row justify-content-center ">
+           
 
             <div class="col-md-2 text-center">
                 <a class="btn btn-outline-dark botao-senha mt-3 d-inline-flex align-items-center"
@@ -106,7 +106,7 @@
             </div>
 
             <div class="modal-body">
-                <div id="conteudoEditarDados"><!-- Conteúdo carregado via fetch aqui --></div>
+                <div id="conteudoEditarDados"></div>
             </div>
 
         </div>
