--- a/cafeservellocontroler/Views/Produto/Index.cshtml
+++ b/cafeservellocontroler/Views/Produto/Index.cshtml
@@ -222,7 +222,7 @@
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h5 class="modal-title">Apagar Produto</h5>
-                                            <button type="button" class="btn-close btn-close-color" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                            <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                         </div>
                                         <div class="modal-body">
                                             @await Html.PartialAsync("_ApagarConfirmacao", produto)
