--- a/cafeservellocontroler/Views/Revendedor/_Criar.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/_Criar.cshtml
@@ -37,7 +37,7 @@
 
         
             <div class="form-group col-md-6">
-                <label for="cnpj">Cnpj</label>
+                <label for="cnpj">CNPJ</label>
             <input type="text" asp-for="Cnpj" class="form-control input-doc" placeholder="Informe o Cnpj">
                 <span asp-validation-for="Cnpj" class="text-danger"></span>
             </div>
