--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -85,7 +85,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalCriarLabel">Cadastrar Revendedor</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
            </div>
            <div class="modal-body">
                 @await Html.PartialAsync("_Criar", new RevendedorViewModel())
@@ -181,7 +181,7 @@
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <h5 class="modal-title">Editar Revendedor</h5>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                                    <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
                                                 <div class="modal-body">
                                                     @await Html.PartialAsync("_Editar", revendedor)
@@ -205,7 +205,7 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h5 class="modal-title">Apagar Revendedor</h5>
-                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                                <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                             </div>
                                             <div class="modal-body">
                                                 @await Html.PartialAsync("~/Views/Revendedor/ApagarConfirmacao.cshtml", revendedor)
