--- a/cafeservellocontroler/Views/Venda/Index.cshtml
+++ b/cafeservellocontroler/Views/Venda/Index.cshtml
@@ -141,7 +141,7 @@
                                                        data-id="@venda.Id">
                                                         <i class="fa-regular fa-trash-can fa-lg"></i>
                                                     </a>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                                                    <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal" aria-label="Fechar"></button>
                                                 </div>
                                             </div>
                                             <div class="modal-body" id="vendaDetalhesBody">
@@ -190,7 +190,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Realizar Venda</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal"></button>
             </div>
             
             <div class="modal-body" id="vendaCriarBody">
@@ -209,7 +209,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Editar Venda</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal"></button>
             </div>
 
             <div class="modal-body" id="vendaEditarBody">
@@ -228,7 +228,7 @@
 
             <div class="modal-header">
                 <h5 class="modal-title">Confirmar Exclusão</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-close-modal" data-bs-dismiss="modal"></button>
             </div>
 
             <div class="modal-body">
